<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:ignore="UselessParent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageDP"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_face"/>
        <TextView
            android:id="@+id/textUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/username"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:layout_margin="0dp"
            android:src="@drawable/ic_menu"
            android:layout_gravity="end|center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="@color/colorBlack"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardColor"
        android:layout_margin="12dp"
        android:padding="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/your_link"
                android:gravity="center"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="10dp"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_copy"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_margin="5dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="10dp"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_share"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:layout_margin="5dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        ads:adUnitId="@string/bannerAdId">
    </com.google.android.gms.ads.AdView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>